# logger-dlib

./: .dockerignore  .gitignore  .gitmodules  COPYING  Dockerfile  DockerfileConfSetup  DockerfileDeployContracts  DockerfileDev  DockerfileServer  DockerfileService  README.md  blockchain_helper.py  build_blockchain_base_image.sh  build_logger_blockchain_base_image.sh  build_logger_service_image.sh  build_logger_test_image.sh  cartesi_dapp_config.yaml  deploy_development.sh  deploy_unittets.sh  dispatcher_config_generator.py  dispatcher_helper.py  docker-compose.yaml  execute_blockchain_base.sh  execute_logger_blockchain_base.sh  execute_logger_service.sh  execute_logger_test_container.sh  extract_logger_address.sh  generate-cartesi-gprc  hardhat.config.ts  logger-entrypoint.sh  logger-server  logger-tests  logger_registry.py  make_dispatcher_configs.sh  manager_server.py  npm-shrinkwrap.json  package.json  requirements.txt  run_python_tests.sh  simple-logger  (+7 more)
contracts/: DataAvailability.sol  Decorated.sol  Instantiator.sol  Logger.sol  LoggerInterface.sol  LoggerTestInstantiator.sol  LoggerTestInterface.sol  Merkle.sol  Migrations.sol
deploy/: 01_libs.ts  02_tests.ts
deployer/: Dockerfile
logger/: __init__.py  logger.py
logger_interface/: Cargo.toml  build.rs
logger_service/: Cargo.toml
logger_service/src/: lib.rs  logger_service.rs
logger_test/: Cargo.toml
logger_test/src/: lib.rs  logger_service.rs  logger_test.rs  main.rs
manager_server/: logger_registry.py  manager_server.py  simple_logger.py  test_client.py
migrations/: 2_deploy_contracts.js  (+1 more)
(+57 files in other folders)
