[package]
description = "Cartesi Logger Service"
homepage = "https://cartesi.io"
name = "logger_service"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
bytes = "0.4.12"
ethereum-types = "0.9.0"
logger_interface = { path = "../logger_interface" }
grpc = { git = "https://github.com/cartesi/grpc-rust", branch = "make_marshall_public" }