[package]
description = "Cartesi Logger Test"
homepage = "https://cartesi.io"
name = "logger_test"
version = "0.1.0"
authors = ["Cartesi Team"]

[dependencies]
log = "0.4"
env_logger = "0.6.0"
ethereum-types = "0.4"
ethabi = "6.1.0"
serde_json = "1.0"
serde = "1.0.0"
serde_derive = "1.0.0"
state = { path = "../dispatcher/state" }
error = { path = "../dispatcher/error" }
dispatcher = { path = "../dispatcher/dispatcher" }
transaction = { path = "../dispatcher/transaction" }
configuration = { path = "../dispatcher/configuration" }
utils = { path = "../dispatcher/utils" }
logger_service = { path = "../logger_service" }